Fixed post-detail html issue w/ overlapping.

--- a/blog/static/assets/css/templatemo-stand-blog.css
+++ b/blog/static/assets/css/templatemo-stand-blog.css
@@ -406,7 +406,8 @@ header .navbar {
 /* Blog Posts */
 
 .blog-posts {
-	margin-top: 100px;
+	/* margin-top: 100px; */
+	padding-top: 25vh;
 }
 
 .blog-posts .blog-post {
